@@ -23,6 +23,9 @@ WebAuth 4.5.6 (unreleased)
     Log a more detailed error message on WebAuth exceptions during
     WebLogin password change.
 
+    Fix configure probes for OpenSSL on platforms without transitive
+    shared library dependencies.
+
 WebAuth 4.5.5 (2013-08-28)
 
     Fix replay detection in WebLogin to use the same memcached object
